--- a/index.html
+++ b/index.html
@@ -1,191 +1,67 @@
-<!DOCTYPE html >
-<!-- #1 #structure #document -->
-<html>
-<head>
-
-    <!-- #1 #structure #title -->
-    <title>chatter|app</title>
-
-    <!-- We need to specify the character encoding, since we use chinese characters -->
-    <meta charset="UTF-8">
-
-    <!-- #2 #css #elements -->
-    <style>
-
-        /* #2 #colorful #palette is:
-          * Background: #F5F5F5 (GREY 100)
-          * Primary Text: black
-
-          * Primary color: #3F51B5 (INDIGO)
-          * Primary color_text : white
-          * Accent color: #CDDC39 (LIME)
-          * Accent color_text: black
-          */
-
-        /*global styles */
-        * {
-            /* #2 #font #faces */
-            font-family: 'Arial', sans-serif;
-        }
-
-        body {
-            /* #2 #colorful #background */
-            background-color: #F5F5F5;
-        }
-
-        h1 {
-            /* #2 #colourful #app-bar */
-            background-color: #3F51B5;
-            color: white;
-        }
-
-        button {
-            /* #2 #colourful #plusfive */
-            background-color: #CDDC39;
-            color: black;
-            /* #2 #font capital #letters */
-            text-transform: uppercase;
-        }
-
-
-        /*styles for channel area*/
-        h2 {
-            /* #2 #colorful #channelandchat */
-            background-color: white;
-        }
-
-        /*styles for chat area*/
-        p {
-            /* #2 #colorful #channelandchat */
-            background-color: white;
-        }
-
-        strong {
-            /* #2 #font #locations need an extra element, we'll use strong for w3w locations */
-            text-transform: uppercase;
-        }
-
-        h3 {
-            /* #2 #font #metadata is now medium */
-            font-size: medium;
-        }
-
-        em {
-            /* #2 #font #remaining overrides the default italic appearance of em elements*/
-            font-size: larger;
-            font-style: normal;
-        }
-
-    </style>
-
-</head>
-
-<body>
-
-<!-- channel area -->
-<!-- #1 #channels #app-bar -->
-<h1>chatter|app</h1>
-
-<!-- #1 #channels #topics -->
-<h2>#Yummy</h2>
-<h2>#SevenContinents</h2>
-<h2>#KillerApp</h2>
-<h2>#FirstPersonOnMars</h2>
-<h2>#Octoberfest</h2>
-
-<!-- #1 #channels #buttons -->
-<button>new</button>
-<button>trending</button>
-<button>favorites</button>
-
-
-<!-- chat area -->
-<!-- #1 #chat #name -->
-<h1>#SevenContinents
-    <!-- #1 #chat #location is wrapped in small tag-->
-    <small>by
-        <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
-        <strong>cheeses.yard.applies</strong>
-    </small>
-</h1>
-
-<!-- #1 #chat #metadata contains location, weekday, day, and time -->
-<h3>
-    <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
-    <strong>cheeses.yard.applies</strong>
-    Wed, June 20th, 13:37
-    <!-- #1 #chat #ttl lives inside the metadata -->
-    <em>15 min. left</em>
-</h3>
-<!-- #1 #chat #messages depict a short fictional chat-->
-<p>What's the place you folks call home?</p>
-<!-- #1 #chat #button subsequent to each message -->
-<button>+5 min.</button>
-
-<!-- #1 #chat #metadata contains location, weekday, day, and time -->
-<h3>
-    <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
-    <strong>truck.cotton.zone</strong>
-    Wed, June 20th, 13:39
-    <!-- #1 #chat #ttl lives inside the metadata -->
-    <em>4 min. left</em>
-</h3>
-<!-- #1 #chat #messages depict a short fictional chat-->
-<p>BRISBANE! Hang loose!</p>
-<!-- #1 #chat #button subsequent to each message -->
-<button>+5 min.</button>
-
-<!-- #1 #chat #metadata contains location, weekday, day, and time -->
-<h3>
-    <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
-    <strong>thus.best.dishes</strong>
-    Wed, June 20th, 14:02
-    <!-- #1 #chat #ttl lives inside the metadata -->
-    <em>12 min. left</em>
-</h3>
-<!-- #1 #chat #messages depict a short fictional chat-->
-<p>The big apple.</p>
-<!-- #1 #chat #button subsequent to each message -->
-<button>+5 min.</button>
-
-<!-- #1 #chat #metadata contains location, weekday, day, and time -->
-<h3>
-    <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
-    <strong>driveway.helper.magazine</strong>
-    Wed, June 20th, 14:02
-    <!-- #1 #chat #ttl lives inside the metadata -->
-    <em>7 min. left</em>
-</h3>
-<!-- #1 #chat #messages depict a short fictional chat-->
-<p>Eu sou um Carocas.</p>
-<!-- #1 #chat #button subsequent to each message -->
-<button>+5 min.</button>
-
-<!-- #1 #chat #metadata contains location, weekday, day, and time -->
-<h3>
-    <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
-    <strong>escapes.pitch.saucepan</strong>
-    Wed, June 20th, 14:07
-    <!-- #1 #chat #ttl lives inside the metadata -->
-    <em>14 min. left</em>
-</h3>
-<!-- #1 #chat #messages depict a short fictional chat-->
-<p>Greetings from the western cape!</p>
-<!-- #1 #chat #button subsequent to each message -->
-<button>+5 min.</button>
-
-<!-- #1 #chat #metadata contains location, weekday, day, and time  -->
-<h3>
-    <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
-    <strong>meanings.identity.pays</strong>
-    Wed, June 20th, 04:08
-    <!-- #1 #chat #ttl lives inside the metadata -->
-    <em>15 min. left</em>
-</h3>
-<!-- #1 #chat #messages depict a short fictional chat-->
-<p>北京</p>
-<!-- #1 #chat #button subsequent to each message -->
-<button>+5 min.</button>
-
-</body>
+<!DOCTYPE html>
+<html lang = "en">    
+    <head>
+        <meta charset="UTF-8">
+        <title>chatter|app</title>
+        <style>
+            /* background color: #F6F5F3, primary text: black, primary color: #6ABCEE,
+            primary color text: black, accent color: #FF7B17, accent color text: black */
+            body {
+                background-color: #F6F5F3;
+                font-family: Arial, sans-serif;
+                max-width: 80%;
+                margin: auto;
+            }        
+            button {
+                text-transform: uppercase;
+                outline: none;
+            }
+            h2, p {
+                background-color: white;
+            }
+            p {
+                font-size: medium;
+            }
+            h1 {
+                background-color: #6ABCEE;
+            }
+            small {
+                background-color: #6ABCEE;
+            }
+            i {
+                font-size: larger;
+                font-style: normal;
+            }            
+        </style>
+    </head>
+    <body>
+        <!--channels-->
+            <h1><img src = "https://ip.lfe.mw.tum.de/sections/moocus.png" alt = "image not loaded" style = "font-size: small; height: 56px; background-color: #6ABCEE">chatter|app</h1>
+            <ul style = "list-style-type: none; line-height: 180%; background-color: white;">
+                <li>#Yummy <img src = "https://ip.lfe.mw.tum.de/sections/star-o.png" alt = "image not loaded"></li>
+                <li>#SevenContinents <img src = "https://ip.lfe.mw.tum.de/sections/star.png" alt = "image not loaded"></li>
+                <li>#KillerApp <img src = "https://ip.lfe.mw.tum.de/sections/star-o.png" alt = "image not loaded"></li>
+                <li>#FirstPersonOnMars <img src = "https://ip.lfe.mw.tum.de/sections/star.png" alt = "image not loaded"></li>
+                <li>#Octoberfest <img src = "https://ip.lfe.mw.tum.de/sections/star-o.png" alt = "image not loaded"></li>
+            </ul>
+            <div style = "background-color: white; height: 36px;">
+                <button style = "margin-top: 3px; margin-left: 4px; height: 30px;"><img src = "https://ip.lfe.mw.tum.de/sections/lightbulb-o.png" alt = "image not loaded" style = "vertical-align: middle;"><span style="vertical-align: middle;"> New</span></button>
+                <button style = "margin-top: 3px; height: 30px;"><img src = "https://ip.lfe.mw.tum.de/sections/fire.png" alt = "image not loaded" style = "vertical-align: middle;"><span style="vertical-align: middle;"> Trending</span></button>
+                <button style = "margin-top: 3px; height: 30px;"><img src = "https://ip.lfe.mw.tum.de/sections/star.png" alt = "image not loaded" style = "vertical-align: middle;"><span style="vertical-align: middle;"> Favourites</span></button>
+            </div>
+        <!---->
+        <hr>
+        <!--chat area-->
+            <h1>#SevenContinents <small>by <a href = "https://map.what3words.com/cheeses.yard.applies" target ="_blank" style = "font-size: inherit; color: inherit; text-transform: uppercase;">cheeses.yard.applies</a></small></h1>
+            <h3><a href = "https://map.what3words.com/cheeses.yard.applies" target="_blank" style = "font-size: inherit; color: inherit; text-transform: uppercase;">cheeses.yard.applies</a> Wed, June 20th, 13:37 <i>15 min. left</i></h3>
+            <div style = "width: 80%"><p>What's the place you folks call home?</p></div>
+            <button style = "background-color: #FF7B17; border-color: #FF7B17;">+5 min.</button>
+            <h3><a href = "https://map.what3words.com/truck.cotton.zone" target= "_blank" style = "font-size: inherit; color: inherit; text-transform: uppercase;">truck.cotton.zone</a> Wed, June 20th, 13:39 <i>4 min. left</i></h3>
+            <div style = "width: 80%"><p>BRISBANE! Hang loose!</p></div>
+            <button style = "background-color: #FF7B17; border-color: #FF7B17;">+5 min.</button>
+            <h3><a href = "https://map.what3words.com/thus.best.dishes" target="_blank" style = "font-size: inherit; color: inherit; text-transform: uppercase;">thus.best.dishes</a> Wed, June 20th, 14:02 <i>12 min. left</i></h3>
+            <div style="width: 80%"><p>The big apple.</p></div>
+            <button style = "background-color: #FF7B17; border-color: #FF7B17;">+5 min.</button>
+        <!---->
+    </body>
 </html>
